# support-rag-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  P4.md  README.md  full_pipeline.md  learnings.md  project_specs.md  prompts.md  pyproject.toml  railway.toml
bot/: __init__.py  config.py  main.py  middlewares.py  models.py
bot/handlers/: admin.py  chat.py  errors.py  escalation.py  feedback.py  start.py  voice.py
bot/llm/: __init__.py  claude_client.py  prompts.py
bot/memory/: conversation.py
bot/rag/: __init__.py  chunker.py  ingest.py  retrieve.py  rrf.py
bot/services/: __init__.py  embeddings.py  supabase_client.py  whisper.py
db/: schema.sql
docs/: architecture.md  supabase-schema.md
secrets/: README.md
test-data/: run_eval.py
test-data/golden/: README.md  qa.jsonl  retrieval.jsonl
test-data/kb/: tehnohub_dostavka_oplata_vozvrat.txt  tehnohub_faq.txt
tests/: __init__.py  conftest.py  test_admin.py  test_chat.py  test_chunker.py  test_config.py  test_errors.py  test_escalation.py  test_eval_metrics.py  test_feedback.py  test_ingest.py  test_memory.py  test_ratelimit.py  test_retrieve.py  test_rrf.py  test_voice.py  test_wow2.py
