[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p4-rag"
version = "0.1.0"
description = "Claude RAG FAQ Telegram bot — grounded answers with citations, hybrid search, manager escalation"
requires-python = ">=3.11"
# Exact pins resolved live via pip on Python 3.11 (2026-05-26). No ranges.
dependencies = [
  "aiogram==3.28.2",
  "aiohttp==3.13.5",
  "anthropic==0.104.1",
  "voyageai==0.3.7",
  "supabase==2.30.0",
  "asyncpg==0.31.0",
  "pgvector==0.4.2",
  "groq==1.2.0",
  "redis==7.4.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "pypdf==6.12.2",
  "python-docx==1.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.14",
  "mypy==2.1.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

# voyageai ships partial type info that fights strict (no_implicit_reexport on
# `Client`; a float|int union on `.embeddings`). Treat it as opaque — our usage
# is verified via Context7 (§9.3), not the stubs.
[[tool.mypy.overrides]]
module = ["voyageai", "voyageai.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
